--- a/app/src/main/res/layout-v16/activity_login.xml
+++ b/app/src/main/res/layout-v16/activity_login.xml
@@ -17,11 +17,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/color_primario_cyan"
-        android:padding="25dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/imgLogo">
+        android:layout_below="@+id/imgLogo"
+        android:paddingLeft="25dp"
+        android:paddingTop="25dp"
+        android:paddingRight="25dp">
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -76,11 +78,32 @@
                 android:textStyle="bold"
                 android:typeface="monospace"
                 android:textAlignment="center"
+                android:textColor="@color/color_Blanco"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
+                android:layout_below="@+id/btnLoginFb"
+                android:layout_marginTop="15dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Iniciar Sesión con Facebook"
+                android:id="@+id/btnLoginFb"
+                android:background="@color/color_fb"
+                android:fontFamily="sans-serif"
+                android:textStyle="bold"
+                android:textColor="@color/color_Blanco"
+                android:drawableLeft="@drawable/com_facebook_button_icon_white"
+                android:paddingLeft="25dip"
+                android:paddingRight="30dip"
+                android:singleLine="true"
+                android:gravity="center"
                 android:layout_below="@+id/btnLogin"
-                android:layout_marginTop="15dp"
-                android:textColor="@color/color_Blanco" />
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="5dp" />
 
         </RelativeLayout>
     </ScrollView>
