--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="color_verde">#429e46</color>
     <color name="color_rojo">#d94235</color>
     <color name="color_crema">#e9e9e7</color>
+    <color name="color_fb">#405897</color>
+    <color name="color_google_plus">#c54a30</color>
 
     <!--Aplica para:-->
     <!--Barra de Título, Barra de acción rápida, flechas de colores de Listview-->
