--- a/app/src/main/res/layout/cardview_adapter_old.xml
+++ b/app/src/main/res/layout/cardview_adapter_old.xml
@@ -15,7 +15,10 @@
         card_view:cardBackgroundColor="@color/color_Blanco"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="7dp">
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -25,26 +28,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/recipe_image"
+                android:scaleType="centerCrop"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/camarones_a_la_diabla" />
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/recipe_name"
-                android:textSize="18dp"
+                android:textSize="14dp"
                 android:text="Título"
                 android:textColor="@color/color_Negro_transparente"
+                android:fontFamily="sans-serif"
                 android:textStyle="bold"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_below="@+id/recipe_image"
-                android:gravity="center" />
+                android:layout_below="@+id/recipe_descripcion" />
 
 
 
