--- a/app/src/main/res/layout-v16/activity_login.xml
+++ b/app/src/main/res/layout-v16/activity_login.xml
@@ -122,6 +122,21 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="5dp" />
 
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/facebookLoginButton"
+                android:layout_height="45dp"
+                android:layout_width="wrap_content"
+                android:layout_below="@+id/btnLoginFb"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="5dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="10dp" />
+
         </RelativeLayout>
     </ScrollView>
 
