--- a/app/src/main/res/layout-v21/activity_recipes.xml
+++ b/app/src/main/res/layout-v21/activity_recipes.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
-
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:elevation="7dp"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-        >
+    tools:openDrawer="start">
 
 
     <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
