--- a/app/src/main/res/menu/menu_nav_bar.xml
+++ b/app/src/main/res/menu/menu_nav_bar.xml
@@ -3,17 +3,32 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_ciudad"
+            android:id="@+id/nav_recetas"
             android:icon="@android:drawable/ic_menu_camera"
-            android:title="Ciudad" />
+            android:title="Recetas" />
         <item
-            android:id="@+id/nav_metodopago"
+            android:id="@+id/nav_menus"
             android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Método de pago" />
+            android:title="Menús" />
         <item
-            android:id="@+id/nav_cerrarsesion"
+            android:id="@+id/nav_planeacion"
             android:icon="@android:drawable/ic_menu_slideshow"
-            android:title="Cerrar Sesión" />
+            android:title="Planeación" />
+
+        <item
+            android:id="@+id/nav_compras"
+            android:icon="@android:drawable/ic_menu_slideshow"
+            android:title="Compras" />
+
+        <item
+            android:id="@+id/nav_productos"
+            android:icon="@android:drawable/ic_menu_slideshow"
+            android:title="Productos" />
+
+        <item
+            android:id="@+id/nav_configuracion"
+            android:icon="@android:drawable/ic_menu_slideshow"
+            android:title="Configuración" />
     </group>
 
 </menu>
