--- a/app/src/main/res/layout-v16/activity_login.xml
+++ b/app/src/main/res/layout-v16/activity_login.xml
@@ -51,7 +51,7 @@
                 android:layout_height="45dp"
                 android:background="@drawable/register_password"
                 android:gravity="center"
-                android:hint="**************"
+                android:hint="Contraseña"
                 android:inputType="textPassword"
                 android:textColor="#000000"
                 android:textStyle="bold"
@@ -59,6 +59,50 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="38dp"
+                android:text="Entrar"
+                android:id="@+id/btnLogin"
+                android:layout_below="@+id/edtContrasena"
+                android:background="@color/color_primario_obscuro_cyan"
+                android:textColor="@color/color_Blanco"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="5dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/facebookLoginButton"
+                android:layout_height="45dp"
+                android:layout_width="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="10dp"
+                android:text="Ingresa con Facebook"
+                android:layout_alignParentTop="false"
+                android:layout_below="@+id/btnLogin"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:id="@+id/tvRegister"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Registrate"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:typeface="monospace"
+                android:textAlignment="center"
+                android:textColor="@color/color_Blanco"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/facebookLoginButton"
+                android:layout_marginTop="35dp" />
 
             <TextView
                 android:id="@+id/tv_forgotpassword"
@@ -72,70 +116,9 @@
                 android:textColor="@color/color_Blanco"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@+id/btnLoginFb"
-                android:layout_marginTop="15dp" />
-
-            <mehdi.sakout.fancybuttons.FancyButton
-                android:id="@+id/btnLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:paddingBottom="10dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp"
-                fancy:fb_borderWidth="1dp"
-                fancy:fb_defaultColor="@color/color_amarillo"
-                fancy:fb_focusColor="#9bd823"
-                fancy:fb_iconPosition="left"
-                fancy:fb_radius="30dp"
-                fancy:fb_text="Iniciar Sesión"
-                fancy:fb_textColor="#FFFFFF"
-                fancy:fb_textSize="20sp"
-                android:layout_below="@+id/edtContrasena"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="20dp" />
-
-            <mehdi.sakout.fancybuttons.FancyButton
-                android:id="@+id/btnLoginFb"
-                android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:paddingBottom="10dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp"
-                fancy:fb_fontIconSize="42dp"
-                fancy:fb_borderWidth="1dp"
-                fancy:fb_defaultColor="@color/color_fb"
-                fancy:fb_focusColor="#9bd823"
-                fancy:fb_iconPosition="left"
-                fancy:fb_radius="30dp"
-                fancy:fb_text="Iniciar con Facebook"
-                fancy:fb_textColor="#FFFFFF"
-                fancy:fb_textSize="20sp"
-                android:layout_below="@+id/btnLogin"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
+                android:layout_below="@+id/tvRegister"
                 android:layout_marginTop="5dp" />
 
-            <com.facebook.login.widget.LoginButton
-                android:id="@+id/facebookLoginButton"
-                android:layout_height="45dp"
-                android:layout_width="wrap_content"
-                android:layout_below="@+id/btnLoginFb"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="5dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
-                android:paddingLeft="20dp"
-                android:paddingTop="10dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="10dp" />
 
         </RelativeLayout>
     </ScrollView>
@@ -147,25 +130,35 @@
         android:background="@drawable/logo_kooben"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/logo_kooben" />
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/imgFB"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp" />
+
     <TextView
-        android:id="@+id/tvRegister"
+        android:id="@+id/tvNameFB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿No tienes cuenta? Registrate"
-        android:textSize="15dp"
-        android:textStyle="bold"
+        android:text="Registrate"
+        android:textSize="13dp"
         android:typeface="monospace"
         android:textAlignment="center"
         android:textColor="@color/color_Blanco"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_alignTop="@+id/imgFB"
+        android:layout_toRightOf="@+id/imgFB"
+        android:layout_toEndOf="@+id/imgFB"
+        android:layout_alignBottom="@+id/view"
+        android:textStyle="bold"
+        android:layout_marginLeft="5dp" />
 
 </RelativeLayout>
