--- a/app/src/main/res/layout-v16/activity_login.xml
+++ b/app/src/main/res/layout-v16/activity_login.xml
@@ -75,7 +75,7 @@
                 android:layout_alignParentStart="true" />
 
             <com.facebook.login.widget.LoginButton
-                android:id="@+id/facebookLoginButton"
+                android:id="@+id/btnFacebookLogin"
                 android:layout_height="45dp"
                 android:layout_width="wrap_content"
                 android:paddingLeft="20dp"
@@ -101,7 +101,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/color_Blanco"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@+id/facebookLoginButton"
+                android:layout_below="@+id/btnFacebookLogin"
                 android:layout_marginTop="35dp" />
 
             <TextView
