--- a/app/src/main/res/layout/activity_registerdata.xml
+++ b/app/src/main/res/layout/activity_registerdata.xml
@@ -29,14 +29,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView"
-        android:layout_below="@+id/tvRegistro"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentRight="false"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="15dp"
+        android:layout_below="@+id/tvRegistro"
         android:layout_above="@+id/btnCrearCuenta">
 
         <RelativeLayout
@@ -62,7 +62,6 @@
                 android:id="@+id/EdtNombre"
                 android:layout_width="fill_parent"
                 android:layout_height="45dp"
-                android:background="@drawable/register_password"
                 android:hint="Nombre(s)"
                 android:inputType="textPersonName|text"
                 android:textColor="#000000"
@@ -77,7 +76,6 @@
                 android:id="@+id/EdtEmail"
                 android:layout_width="fill_parent"
                 android:layout_height="45dp"
-                android:background="@drawable/register_password"
                 android:hint="Dirección de Correo Electrónico"
                 android:textColor="#000000"
                 android:textStyle="bold"
@@ -91,9 +89,8 @@
                 android:id="@+id/EdtContrasena"
                 android:layout_width="fill_parent"
                 android:layout_height="45dp"
-                android:background="@drawable/register_password"
                 android:hint="Contraseña"
-                android:inputType="textPassword|text|textVisiblePassword"
+                android:inputType="textPassword"
                 android:textColor="#000000"
                 android:textStyle="bold"
                 android:gravity="center"
@@ -105,9 +102,8 @@
                 android:id="@+id/EdtConfirmar"
                 android:layout_width="fill_parent"
                 android:layout_height="45dp"
-                android:background="@drawable/register_password"
                 android:hint="Confirmar Contraseña"
-                android:inputType="textPassword|text|textVisiblePassword"
+                android:inputType="textPassword"
                 android:textColor="#000000"
                 android:textStyle="bold"
                 android:gravity="center"
@@ -117,30 +113,6 @@
 
         </RelativeLayout>
     </ScrollView>
-
-    <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/btnCrearCuenta"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="10dp"
-        fancy:fb_fontIconSize="42dp"
-        fancy:fb_borderWidth="1dp"
-        fancy:fb_defaultColor="@color/color_primario_cyan"
-        fancy:fb_focusColor="#9bd823"
-        fancy:fb_iconPosition="left"
-        fancy:fb_radius="30dp"
-        fancy:fb_text="Crear Cuenta"
-        fancy:fb_textColor="#FFFFFF"
-        fancy:fb_textSize="20sp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/scrollView"
-        android:layout_alignEnd="@+id/scrollView"
-        android:layout_alignLeft="@+id/scrollView"
-        android:layout_alignStart="@+id/scrollView"
-        android:layout_marginBottom="15dp" />
 
     <TextView
         android:id="@+id/tvRegistro"
@@ -159,5 +131,19 @@
         android:layout_toEndOf="@+id/imgLogo"
         android:layout_alignBottom="@+id/imgLogo"
         android:layout_alignTop="@+id/imgLogo" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:text="Crear Cuenta"
+        android:id="@+id/btnCrearCuenta"
+        android:background="@color/color_primario_cyan"
+        android:textColor="@color/color_Blanco"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/scrollView"
+        android:layout_alignStart="@+id/scrollView"
+        android:layout_alignRight="@+id/scrollView"
+        android:layout_alignEnd="@+id/scrollView"
+        android:layout_marginBottom="5dp" />
 
 </RelativeLayout>
