--- a/app/src/main/res/layout/cardview_adapter_old.xml
+++ b/app/src/main/res/layout/cardview_adapter_old.xml
@@ -27,7 +27,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/recipe_image"
+                android:id="@+id/product_image"
                 android:scaleType="centerCrop"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
@@ -36,7 +36,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/recipe_name"
+                android:id="@+id/product_title"
                 android:textSize="14dp"
                 android:text="Título"
                 android:textColor="@color/color_Negro_transparente"
@@ -46,7 +46,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_below="@+id/recipe_descripcion" />
+                android:layout_below="@+id/product_description" />
 
 
 
@@ -55,8 +55,8 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Small Text"
-                android:id="@+id/recipe_descripcion"
-                android:layout_below="@+id/recipe_image"
+                android:id="@+id/product_description"
+                android:layout_below="@+id/product_image"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentRight="true"
