--- a/app/src/main/res/layout/cardview_adapter_products.xml
+++ b/app/src/main/res/layout/cardview_adapter_products.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:fancy="http://schemas.android.com/tools"
     android:orientation="horizontal">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/cv"
-        card_view:cardCornerRadius="2dp"
-        card_view:cardElevation="3dp"
+        card_view:cardCornerRadius="5dp"
+        card_view:cardElevation="10dp"
         card_view:cardBackgroundColor="@color/color_Blanco"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -25,42 +26,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/product_image"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/camarones_a_la_diabla" />
+                android:src="@drawable/camarones_a_la_diabla"
+                android:layout_alignParentTop="true" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Camarones a la diabla"
+                android:fontFamily="sans-serif"
                 android:id="@+id/product_title"
-                android:textSize="18dp"
-                android:text="Título"
-                android:textColor="@color/color_Negro_transparente"
-                android:textStyle="bold"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_below="@+id/product_image"
-                android:gravity="center" />
-
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Small Text"
-                android:id="@+id/product_description"
+                android:textColor="@color/color_Blanco"
+                android:textIsSelectable="false"
+                android:foregroundGravity="center_vertical|center"
+                android:gravity="center_vertical|center_horizontal"
                 android:layout_below="@+id/product_image"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="5dp"
-                android:visibility="gone" />
+                android:visibility="visible"
+                android:layout_alignParentBottom="true" />
+
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
